public/style.css
/* ... */
.upper {
    font-size: 0.8rem;
    text-transform: uppercase;
    letter-spacing: 0.05em;
    font-weight: 600;
}
.light {
    font-weight: 400;
}
strong, h1, h2, h3, h4, h5, h6 {
    font-weight: 700;
}
.overflow-ellipsis {
    overflow: hidden;
    white-space: nowrap;
    text-overflow: ellipsis;
}

input {
    font-family: inherit;
    font-size: inherit;
    color: inherit;
    background: transparent;
    padding: 0;
    margin: 0;
}
input:focus {
    outline: none;
}

header {
    display: flex;
    align-items: center;
    font-size: .9rem;
    width: 100%;
    border-bottom: 1px solid var(--border-bg);
    padding: 0.5rem 1.5rem;
}
header.gap1 {
    gap: 1.5rem;
}
header.gap2 {
    gap: 2.5rem;
    padding: 0.35rem 1.5rem;
}
.header-logo {
    height: 1em;
}

.vertical-div {
    background: var(--border-bg);
    height: 1.5em;
    width: 1px;
    flex-shrink: 0;
}

.search {
    display: flex;
    font-size: 1rem;
    align-items: center;
    gap: 0.8em;
    border: 1px solid var(--quaternary);
    padding: 0 0.8em;
    height: 2.5rem;
    min-width: 12em;
    white-space: nowrap;
}
.search .search-icon {
    height: 1em;
}
.search input {
    border: none;
    background: transparent;
    color: var(--primary);
    letter-spacing: inherit;
    width: 9em;
}
.search input::placeholder {
    color: var(--tertiary);
}
.search button {
    border: none;
    padding: 0;
    color: var(--tertiary-light);
}

mark.search-highlight {
    background: var(--accent-lighter);
    color: var(--bg);
}
mark.search-highlight-active {
    background: var(--bg);
    color: var(--page-bg);
}

.clf {
    font-weight: bold;
    padding: 0.4em 0.8em;
}
.clf.b {
    background: rgba(254, 183, 67, 0.1);
    color: #FEB743;
    border: 1px solid rgba(254, 183, 67, 0.25);
}

img[src*="#icon"] {
    width: 1.5em;
    height: 1.5em;
    vertical-align: middle;
}

a {
    text-decoration: none;
}

button {
    background: transparent;
    border: 1px solid currentColor;
    font-family: inherit;
    font-size: inherit;
    padding: 0.8em 1.5em;
    font-weight: bold;
    letter-spacing: inherit;
    font-size: inherit;
    height: 2.5rem;
    display: flex;
    align-items: center;
    cursor: pointer;
    transition: opacity 0.1s;
    touch-action: manipulation;
}
button:disabled {
    opacity: 0.25;
    cursor: default;
}

main {
    position: relative;
    display: flex;
    width: 100%;
    height: 100%;
    overflow: hidden;
}

.leave-button {
    transition: background-color 100ms;
}
.leave-button:hover {
    background-color: rgba(254,68,69,0.08);
}
.leave-button::after {
    content: "Leave"
}

aside {
    position: relative;
    display: flex;
    flex-direction: column;
    width: min(24%, 320px);
    flex-shrink: 0;
    overflow: hidden;
    height: 100%;
}
aside > div {
    display: flex;
    flex-direction: column;
    gap: 1em;
    padding: 1.25em;
}
aside h2.upper {
    font-size: 1rem;
    margin: 0;
}
aside h1.upper {
    font-size: 1.5rem;
    margin: 0;
    margin-top: 0.5rem;
}
.progress-bar {
    height: 2px;
    background: #1e1e1e;
    margin: 0.5em 0;
}
.progress-bar-fill {
    height: 100%;
    background: var(--accent);
    transition: width 0.3s ease;
}
.progress-label {
    font-size: 0.8rem;
    color: var(--tertiary);
    display: flex;
    justify-content: space-between;
    letter-spacing: 0.05em;
    gap: 1em;
}

nav {
    position: relative;
    border-top: 1px solid var(--border-bg);
    overflow: scroll;
    padding: 1.25em;
    padding-right: 0;
}
nav ol {
    margin: 0;
    padding: 0;
    padding-left: 1em;
}
nav > ol {
    padding-left: 0;
}
nav li:has(.hv1) > ol {
    padding-left: 2.25em;
}
nav li {
    list-style-type: none;
}
nav li > div {
    display: flex;
    gap: 1ch;
    justify-content: space-between;
    padding: 0.4rem 0;
}
nav a {
    flex-grow: 1;
    color: var(--tertiary-midlight);
    transition: color 100ms;
    font-size: 0.85em;
    display: flex;
    gap: 0.75rem;
}
nav li:has(> div > .dropdown-button.toggled) > ol {
    display: none;
}
nav > ol:first-child > li:first-child > a {
    padding-top: 0;
}
nav .dropdown-button {
    border: none;
    padding: 0;
    height: unset;
    font-weight: 300;
    font-size: .8rem;
    color: var(--tertiary-light);
    width: 2.5rem;
    justify-content: center;
    flex-shrink: 0;
    transition: color 100ms;
}
nav .dropdown-button:hover {
    color: var(--secondary);
}
nav .dropdown-button::after {
    content: "∧"
}
nav .dropdown-button.toggled {
    color: var(--primary);
}
nav .dropdown-button.toggled::after {
    content: "∨"
}
nav a:has(.hv1) {
    color: var(--tertiary-light);
}
nav .hv1 {
    display: flex;
    gap: inherit;
    font-size: 1.1rem;
    font-weight: 600;
}
nav .hv2 {
    font-size: 1rem;
}
nav .number {
    flex-shrink: 0;
    font-variant-numeric: tabular-nums;
}
nav .hv1 > .number {
    color: var(--accent);
    font-size: 1rem;
}
nav li:has(.selected) > div > a {
    color: var(--secondary-light);
}
nav li > div > a:hover {
    color: var(--secondary-light);
}
nav li > div > a.selected, nav li > div > a.selected:hover {
    color: var(--accent);
    pointer-events: none;
}
#navPageMarker {
    position: absolute;
    top: 0;
    left: 0;
    width: 2px;
    background: var(--accent);
    transition: height 0.3s ease, top 0.3s ease, opacity 0.3s;
}
#navPageMarker.hidden {
    display: block;
    opacity: 0;
}

#sideToggleButton {
    position: absolute;
    top: 1rem;
    right: 1rem;
    width: 3.5rem;
    height: 3.5rem;
    padding: 0;
    border: none;
    background: var(--bg);
    border: 1px solid var(--quaternary);
    color: var(--secondary);
    font-size: 2em;
    font-weight: normal;
    border-radius: 50%;
    z-index: 2;
    display: none;
}
/* ... */

